--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "^4.3.4",
     "express": "^4.17.1",
     "express-validator": "^6.14.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.6",
     "mongoose-timestamp": "^0.6.0"
